# Villepreux

./: com.github.madcapjake.Villepreux.json  io.github.madcapjake.Villepreux.json  meson.build
data/: com.github.madcapjake.Villepreux.appdata.xml.in  com.github.madcapjake.Villepreux.desktop.in  com.github.madcapjake.Villepreux.gschema.xml  io.github.madcapjake.Villepreux.desktop.in  io.github.madcapjake.Villepreux.gschema.xml  io.github.madcapjake.Villepreux.metainfo.xml.in  meson.build  parameters.json
po/: POTFILES
src/: NotificationService.js  database.js  main.js  meson.build  villepreux.gresource.xml  villepreux.in  window.js
src/utils/: date_formatter.js  icons.js  image_handler.js
src/views/: AddTankDialog.js  AnalyzeParametersDialog.js  CopyTaskDialog.js  CreateTaskTemplateDialog.js  DashboardView.js  DuplicateTankDialog.js  EditTankDialog.js  GlobalDashboardView.js  LivestockUpdateDetailDialog.js  LivestockUpdateDialog.js  LivestockView.js  LogParameterDialog.js  LogSingleParameterDialog.js  LogTaskActivityDialog.js  MoveLivestockDialog.js  ParameterView.js  PastActivitiesDialog.js  SettingsDialogs.js  TaskView.js
src/widgets/: ChartWidget.js  MultiChartWidget.js
